--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
     <script src='js/Loader.js'></script>
     <script src='js/Slideshow.js'></script>
     <script src='js/app.js'></script>
-
-
-
-
   </head>
+
   <body>
     <div class="container">
       <div class="row">
         <div class="header">
           <div class="col-md-4 text-left nav">
+            <!-- <div class='logo'>&nbsp;</div> -->
             <img class="col-md4" src="img/logo.png" alt=""></div>
           <div class="col-md-4"></div>
           <div class="col-md-4 text-right nav">
-            <!-- <ul class='nav'>
-              <li>home</li>
-              <li>service</li>
-              <li>work</li>
-              <li>contact</li>
+            <ul>
+              <!-- one long line to prevent gaps with inline-block -->
+              <a href=""><li class='highlight'><span>home</span></li></a><a
+               href=""><li><span>service</span></li></a><a
+               href=""><li><span>work</span></li></a><a
+               href=""><li><span>contact</span></li></a><a
+               href="http://www.nickelfish.com"><li class='last'><img src="img/logo_nf.png" alt=""></li></a>
 
-            </ul> -->
-            <img class="col-md4 nav" src="img/nav.png" alt=""></div>
+            </ul>
+            <!-- <img src="img/nav.png" alt=""></div> -->
         </div>
       </div>
       <div class="row">
